objects/ssot__AdverseEventResultingEffect__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdverseEventId__c</fullName>
        <label>Adverse Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectId__c</fullName>
        <label>Effect</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectObject__c</fullName>
        <label>Effect Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Supporting Info Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667911585_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventResultingEffect_AdverseE_rel</label>
        <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
        <relationshipLabel>AdverseEventResultingEffect_AdverseE_rel</relationshipLabel>
        <relationshipName>rel_1716667911585_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726430923_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventResultingEffect_EffectId_rel</label>
        <referenceTo>ssot__CareObservation__dlm</referenceTo>
        <relationshipLabel>AdverseEventResultingEffect_EffectId_rel</relationshipLabel>
        <relationshipName>rel_1716726430923_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726432058_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventResultingEffect_EffectId_rel</label>
        <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
        <relationshipLabel>AdverseEventResultingEffect_EffectId_rel</relationshipLabel>
        <relationshipName>rel_1716726432058_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>